--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,171 @@
 absl-py==2.1.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+alembic==1.14.1
+amqp==5.3.1
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+appdirs==1.4.4
 astunparse==1.6.3
+asyncssh==2.19.0
+atpublic==5.1
+attrs==25.1.0
+billiard==4.2.1
+bleach==6.2.0
 blinker==1.8.2
 cachetools==5.5.0
+celery==5.4.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cloudpickle==3.1.1
+colorama==0.4.6
+configobj==5.0.9
 contourpy==1.3.0
+cryptography==44.0.0
 cycler==0.12.1
+databricks-sdk==0.43.0
+Deprecated==1.2.18
+dictdiffer==0.9.0
+diskcache==5.6.3
+distro==1.9.0
+docker==7.1.0
+dpath==2.2.0
+dulwich==0.22.7
+dvc==3.59.0
+dvc-data==3.16.9
+dvc-http==2.32.0
+dvc-objects==5.1.0
+dvc-render==1.0.2
+dvc-studio-client==0.21.0
+dvc-task==0.40.2
+entrypoints==0.4
+filelock==3.17.0
 Flask==3.0.3
 flatbuffers==24.3.25
+flatten-dict==0.4.2
+flufl.lock==8.1.0
 fonttools==4.53.1
+frozenlist==1.5.0
+fsspec==2025.2.0
+funcy==2.0
 gast==0.4.0
+gitdb==4.0.12
+GitPython==3.1.44
 google-auth==2.34.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
+grandalf==0.8
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+greenlet==3.1.1
 grpcio==1.66.1
+gto==1.7.2
 gunicorn==23.0.0
 h5py==3.11.0
+hydra-core==1.3.2
 idna==3.8
+importlib_metadata==8.5.0
+iterative-telemetry==0.0.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
+kaggle==1.6.17
 keras==3.5.0
 kiwisolver==1.4.6
+kombu==5.4.2
 libclang==18.1.1
+Mako==1.3.9
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.7.0
 mdurl==0.1.2
 ml-dtypes==0.3.2
+mlflow-skinny==2.20.1
+multidict==6.1.0
 namex==0.0.8
+networkx==3.4.2
 numpy==1.24.0
 oauthlib==3.2.2
+omegaconf==2.3.0
 opencv-python==4.10.0.84
+opentelemetry-api==1.30.0
+opentelemetry-sdk==1.30.0
+opentelemetry-semantic-conventions==0.51b0
 opt-einsum==3.3.0
 optree==0.12.1
+orjson==3.10.15
 packaging==24.1
+pandas==2.2.3
+pathspec==0.12.1
 Pillow==9.2.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+propcache==0.2.1
 protobuf==4.25.4
+psutil==6.1.1
+pyarrow==18.1.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydot==3.0.4
+pygit2==1.17.0
 Pygments==2.18.0
+pygtrie==2.5.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytz==2025.1
+PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.8.0
 rsa==4.9
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+scikit-learn==1.6.1
+scipy==1.15.1
+scmrepo==3.3.10
+semver==3.0.4
+shellingham==1.5.4
+shortuuid==1.0.13
+shtab==1.7.1
 six==1.16.0
+smmap==5.0.2
+SQLAlchemy==2.0.38
+sqlparse==0.5.3
+sqltrie==0.11.1
+tabulate==0.9.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.2
 tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
-typing_extensions==4.5.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+tomlkit==0.13.2
+tqdm==4.67.1
+typer==0.15.1
+typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.2.2
+vine==5.1.0
+voluptuous==0.15.2
+wcwidth==0.2.13
+webencodings==0.5.1
 Werkzeug==3.0.4
 wrapt==1.16.0
+yarl==1.18.3
+zc.lockfile==3.0.post1
+zipp==3.21.0
